# wolf_extra_descriptions

a1_description/: CMakeLists.txt
a1_description/params/: a1_params.yaml
a1_description/robots/: a1.urdf.xacro
aliengo_description/: CMakeLists.txt
aliengo_description/params/: aliengo_kinova_params.yaml  aliengo_params.yaml
aliengo_description/robots/: aliengo.urdf.xacro
aliengo_description/urdfs/: accessories.urdf.xacro  const.xacro  leg.xacro
anymal_description/: CMakeLists.txt
anymal_description/params/: anymal_params.yaml
anymal_description/robots/: anymal.urdf.xacro
anymalc_description/: CMakeLists.txt
anymalc_description/params/: anymalc_params.yaml
anymalc_description/robots/: anymalc.urdf.xacro
b1_description/: CMakeLists.txt  package.xml
b1_description/params/: b1_params.yaml  b1_z1_params.yaml
b1_description/robots/: b1.srdf.xacro  b1.urdf.xacro  b1_z1.srdf.xacro
b1_description/urdfs/: const.xacro  leg.xacro
hyq_description/: CMakeLists.txt
hyq_description/params/: hyq_kinova_params.yaml  hyq_params.yaml  hyq_teleop_params.yaml
hyq_description/robots/: hyq.urdf.xacro
minicheetah_description/: CMakeLists.txt
minicheetah_description/params/: minicheetah_params.yaml
minicheetah_description/robots/: minicheetah.urdf.xacro
solo_description/: CMakeLists.txt
solo_description/params/: solo_params.yaml
solo_description/robots/: solo.urdf.xacro
ylo2_description/: CMakeLists.txt
ylo2_description/robots/: ylo2.urdf.xacro
z1_description/: CMakeLists.txt
z1_description/urdfs/: const.xacro  robot.xacro
(+1 files in other folders)
